# ambrosia

./: .gitignore  CMakeLists.txt  README.md
data/balancing/: balancing.md  balancing.py
data/levels/: dessert-arena.json  pizza-arena.json  recipe-1.json  recipe-2.json  recipe-3.json  tutorial.json
data/maps/dessert-arena/: dessert-arena.tmx
data/maps/pizza-arena/: pizza-arena.tmx
data/shaders/: Particle.fs  Particle.fs.glsl  Particle.vs  Particle.vs.glsl  animated_sprite.fs.glsl  animated_sprite.vs.glsl  bloblike.vs.glsl  distendable.vs.glsl  dynamic_texture.fs.glsl  dynamic_texture.vs.glsl  fading.fs.glsl  fire.fs.glsl  fire.vs.glsl  hp_bar.fs.glsl  skill_button.fs.glsl  skill_button.vs.glsl  textured.fs.glsl  textured.vs.glsl  water.fs.glsl
src/: Button.cpp  Button.hpp  EventSystem.hpp  Events.hpp  Map.cpp  Map.hpp  PathFindingSystem.cpp  PathFindingSystem.hpp  Projectile.cpp  Projectile.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  TurnSystem.cpp  TurnSystem.hpp  UISystem.cpp  UISystem.hpp  ai.cpp  ai.hpp  animation_components .cpp  animation_components.cpp  animation_components.hpp  animation_system.cpp  animation_system.hpp  button.cpp  button.hpp  common.hpp  debug.cpp  debug.hpp  egg.cpp  egg.hpp  fish.cpp  main.cpp  map.cpp  map.hpp  map_objects.cpp  map_objects.hpp  path_finding_system.hpp  physics.cpp  projectile.cpp  projectile_system.cpp  (+22 more)
src/ai/: ai.cpp  ai.hpp  behaviour_tree.cpp  behaviour_tree.hpp  state_system.cpp  state_system.hpp  swarm_behaviour.cpp  swarm_behaviour.hpp  tree_components.hpp
src/animation/: animation_components.cpp  animation_components.hpp  animation_system.cpp  animation_system.hpp
src/effects/: effect_system.cpp  effect_system.hpp  effects.cpp  effects.hpp
src/entities/: chia.cpp  chia.hpp  egg.cpp  egg.hpp  ember.cpp  ember.hpp  enemies.cpp  enemies.hpp  players.cpp  players.hpp  raoul.cpp  raoul.hpp  taji.cpp  taji.hpp  tiny_ecs.cpp  tiny_ecs.hpp
src/game/: achievement_system.cpp  achievement_system.hpp  ahievement_system.cpp  camera.cpp  camera.hpp  camera_system.cpp  camera_system.hpp  common.cpp  common.hpp  event_system.hpp  events.hpp  game_state_system.cpp  game_state_system.hpp  range_indicator_system.cpp  range_indicator_system.hpp  shop_system.cpp  shop_system.hpp  stats_component.cpp  stats_component.hpp  stats_system.cpp  stats_system.hpp  swarm_behaviour.cpp  swarm_behaviour.hpp  turn_system.cpp  turn_system.hpp  world.cpp  world.hpp
src/level_loader/: level_loader.cpp  level_loader.hpp
src/levels/: levels.cpp  levels.hpp
src/maps/: map.cpp  map.hpp  map_objects.cpp  map_objects.hpp  path_finding_system.cpp  path_finding_system.hpp
src/particles/: ConfettiEmitter.cpp  RainEmitter.cpp  SparkleEmitter.cpp  particle_system.cpp  particle_system.hpp
src/physics/: debug.cpp  debug.hpp  physics.cpp  physics.hpp  projectile.cpp  projectile.hpp  projectile_system.cpp  projectile_system.hpp
src/rendering/: render.cpp  render.hpp  render_components.cpp  render_components.hpp  render_init.cpp  text.cpp  text.hpp
src/skills/: entity_filter.cpp  entity_filter.hpp  entity_handler.cpp  entity_handler.hpp  entity_provider.cpp  entity_provider.hpp  skill.cpp  skill.hpp  skill_component.cpp  skill_component.hpp  skill_params.hpp  skill_system.cpp  skill_system.hpp
src/ui/: button.cpp  button.hpp  effects.cpp  effects.hpp  menus.cpp  menus.hpp  shop_system.cpp  shop_system.hpp  tutorials.cpp  tutorials.hpp  ui_components.cpp  ui_components.hpp  ui_entities.cpp  ui_entities.hpp  ui_system.cpp  ui_system.hpp
